<resources>
    <string name="app_name">practicaFinal</string>
    <string name="volver">Volver</string>
    <string name="nombre">NOMBRE:</string>
    <string name="pais">PAIS:</string>
    <string name="web">WEB:</string>
    <string name="dominio">DOMINIO:</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="registrar_usuario">Registrar Usuario</string>
    <string name="selecciona_el_pais">Selecciona el pais:</string>
    <string name="buscar">Buscar</string>
</resources>